Fixed overflow issue for playlist table

--- a/public/modules/playlists/css/playlist.css
+++ b/public/modules/playlists/css/playlist.css
@@ -183,6 +183,7 @@ a {
 	border-radius: 2%;
 	padding:1%;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	background: rgba(0, 0, 0, 0.3) !important;
 }
 
